public/css/main.css
#calculator {
    display: inline;
}

#dgtemp {
    background-color: #999;
}

body {
    background-color: #f6f5f4;
}

/* Navbar header */

.li-pipes {
    color: #f6f5f4;
    padding: 15px 0 15px 0;
}

/* Intro Section */

.jumbotron-container {
    height: 40vh;
}

.big-ass-tv {
    overflow: hidden;
    max-height: 100%;
    background: #2C2420 none;
    border: 2rem solid #5C5C6F;
    -webkit-box-shadow: 5px 8px 0px 0px rgba(76, 64, 81, 1);
    -moz-box-shadow: 5px 8px 0px 0px rgba(76, 64, 81, 1);
    box-shadow: 5px 8px 0px 0px rgba(76, 64, 81, 1);
}

.intro-section {
    max-width: 1200px;
    margin: 0 auto;
    background-size: cover;
    background: url('../img/dg_main_yellow_background.png') no-repeat center;
    height: auto;
    padding-bottom: 4rem;
}

.intro-container {
    padding-top: 100px;
}

/* Navigation section */

.nav-section {
    margin-top: 5rem;
    padding-bottom: 20px;
}

.nav-button {
    text-align: center;
    padding: 10rem 0;
    background-color: #78A19D;
    border-radius: 2px;
    border: 2px solid #C6D9DA;
    box-shadow: 5px 8px 0 0 #4D4856;
}

.nav-button:hover {
    transform: translate(3px, 4px);
    box-shadow: 2px 4px 0 0 #4D4856;
}

.nav-button:active {
    box-shadow: inset -1px 0 13px 3px #4D4856;
}

.nav-btn-text {
    position: absolute;
    bottom: 0;
    left: 1rem;
    color: #C6D9DA;
}

/* sub header */

.sub-header {
    width: 100%;
    margin: 0 auto;
    background-color: #78A19D;
    /* box shadow styling */
    -webkit-box-shadow: 0px 10px 0px 5px #60505a;
    -moz-box-shadow: 0px 10px 0px 5px #60505a;
    box-shadow: 0px 10px 0px 5px #446064;
    padding-bottom: 10px;
    margin-bottom: 2rem;
    margin-top: 5rem;
}

.sub-header-text-child {
    margin: 0;
}

/* Main sub-header Title */

.sub-header-text-child:nth-child(1) {
    font-weight: 800;
    text-transform: uppercase;
    color: antiquewhite;
    text-shadow: 3px 1px 0px rosybrown;
}

.sub-header-text-child:nth-child(2) {
    color: antiquewhite;
}

/* Meeting Info */

.sub-header-info-child {
    font-weight: 800;
    color: antiquewhite;
}

.sub-header-info-child:nth-child(2) {
    margin-bottom: 0;
}


/* sub header join button*/
.sub-header-btn {
  position: relative;
  top: 50%;
  transform: translateY(-50%); 
}

.join-btn {
  padding: 1rem 4rem;

  color: white;
  background-color: #647389;
  border-color: #78A19D;
  border: 1px solid transparent;

  box-shadow: 0 3px 0 0 #5C5C6F;
} 

/* Slack Section */

.form-container {
    background-color: #fff;
    padding-top: 25px;
    padding-bottom: 50px;
    text-align: center;
}

.slack-section {
  max-width: 1200px;
  margin: 0 auto;
}

.slack-header {
    height: 10rem;
    line-height: 10rem;
}

.slack-header img {
    margin-left: -3rem;
    display: inline-block;
    max-height: 100%;
}

.slack-header h2 {
    margin: 0 auto;
    display: inline-block;
    /* Center header vertically*/
    vertical-align: middle;
}

.slack-section-text {
    font-family: 'Lato', sans-serif;
}

.slack-join-button {
    background: #2ab27b;
    padding: 14px 32px 16px;
    font-size: 1.6rem;
    line-height: 1.2rem;
    font-family: 'Lato', sans-serif;
    font-weight: 600;
    color: #fff;
}

.slack-join-button:hover {
    background: #2ab27b;
    padding: 14px 32px 16px;
    font-size: 1.6rem;
    line-height: 1.2rem;
    font-family: 'Lato', sans-serif;
    font-weight: 600;
    color: #fff;
    box-shadow: 5px 5px 0 0;
}

.slack-input-field {
    font-size: 1.5em;
    height: 2em;
}

/* Projects section */

.projects-section {
    max-width: 1200px;
    margin: 0 auto;
    background-size: cover;
    background: url('../img/dg_main_green_background.png') no-repeat center;
}

/* Project Header */

.projects-header {
    background-color: #f6f5f4;
    height: 300px;
    position: relative;
}

.projects-header-text {
    color: #d6d5d4;
    text-transform: uppercase;
    font-size: 3em;
    position: absolute;
    bottom: 0;
    right: 0;
}

.projects-header-container {
    position: relative;
    height: 100%;
    margin: 0 auto;
    padding: 0;
    border: 0;
    color: white;
}

/* Project header images */

.project-header-img {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    display: inline-block;
    float: left;
}

/* hide all but first image for mobile */

.project-header-img:nth-child(2),
.project-header-img:nth-child(3) {
    display: none;
}

.tint {
    height: 100%;
}

.tint:before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    transition: all .3s linear;
    background: rgba(203, 191, 245, 0.8);
}

/* Projects list */

.projects-list-container {
    margin-top: 4rem;
}

.projects-list {
    list-style: none;
    color: #fff;
}

/* project categories */

.project-category-header {
    background-color: #4D4856;
    text-align: center;
    color: lightblue;
    border-radius: 157px 157px 157px 157px;
    box-shadow: 5px 8px 0 0 antiquewhite;
}

/* individual project container stylings */

/* certain image dimensions require a higher, consistent height otherwise projects
who's titles exceeds 1 line will end up having a different height from other projects and 
will make it so project items don't stay on the same row 
*/

.pl-3x2 li {
    height: 28rem;
}

.pl-1x1 li {
    height: 31rem;
}

.projects-list li img {
    width: 100%;
    box-shadow: 5px 8px 0 0 #4D4856;
}

/* FAQ SECTION */

.faq-section {
    margin: 0 auto;
    max-width: 1200px;
    background-size: cover;
    background: url('../img/dg_main_yellow_background.png') no-repeat center;
}

.faq-header {
    background-color: #564149;
    border-radius: 50px;
    box-shadow: -12px 8px 0px 0px #491212;
    color: antiquewhite;
    margin-bottom: 1rem;
}

.faq-row-container {
    margin-top: 5rem;
    margin-bottom: 5rem;
}

.faq-container {
    background-color: #564149;
    color: antiquewhite;
    font-size: 2em;
    line-height: 1.1em;
    border-radius: 50px;
    margin-bottom: 1rem;
    box-shadow: -12px 8px 0px 0px #491212;
}

/* Need a secondary inner container to provide
padding to text inside of parent container */

.faq-inner-container {
    padding: 2rem;
}

.faq-container .question {
    /* question left border styling */
    padding-left: 0.5em;
    border-left: 1rem solid #bc4343;
    margin: 2rem 2rem 2rem 3rem;
}

.faq-container .answer {
    margin: 2rem 2rem 2rem 3rem;
}

/* Gallery/Lightbox/Carousel */

.gallery-section {
    max-width: 1200px;
    margin: 0 auto;
    padding: 200px 0;
    background-size: cover;
    background: url('../img/dg_main_red_background.png') no-repeat center;
}

.gallery-header {
    background-color: white;
    border-radius: 25px;
    text-align: center;
    float: none;
    position: relative;
    top: 10%;
    font-weight: 800;
    font-family: Helvetica, sans-serif;
    transform: translateY(-90%) skew(-4deg, -4deg) rotate(4deg);
    margin: 0 auto;
    padding: 2rem 1rem;
    box-shadow: 8px 12px 0 0 lightgrey;
    color: darkslategray;
}

.gallery-header h2 {
    font-weight: 800;
}

.gallery-slider {
    position: relative;
}

.tv-gallery-slider {
    position: relative;
}

.tv-gallery-section {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

.tv-item {

}

.nav-btn {
    position: absolute;
    color: white;
    opacity: 0.75;
    font-size: 50px;
    top: 50%;
    margin-top: -25px;
    z-index: 100;
    transition: all 0.25s;
}

.nav-btn:hover {
    opacity: 1;
    cursor: pointer;
}

.nav-btn.prev,
.nav-btn.tv-prev {
    left: 0.1em;
}

.nav-btn.next,
.nav-btn.tv-next {
    right: 0.1em;
}

/* Contact Section */

.contact-section {
  margin: 0 auto;
  max-width: 1200px;
  max-height: 768px;
}

.contact-container {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

.contact-section .container {
    padding: 0;
    position: relative;
    top: 50%;
}

.contact-title {
    font-size: 2.5em;
    font-weight: 300;
    color: #424242;
    display: block;
    font-family: "Open Sans", sans-serif;
    text-align: center;
}

.contact-title a {
    font-size: 0.8em;
}

/* Repositories Page */

.repos-main {
    /*padding-top: 100px;*/
    /*max-width: 1200px;*/
    margin: 0 auto;
}

/* repos page header */
.repos-header {
    background-image: url('../img/background_gathering2.png');
    background-size: cover;
    background-position: center;

    height: 350px;
    position: relative;

    border-bottom: 4rem solid white;
}

.repos-header-text {
  color: white;
  font-size: 4em;

  position: absolute;
  bottom: 6%;
  right: 5%;
  
  /* line height 0 so it will blend into the border-bottom color */
  line-height: 0;
  margin: 0;
  text-transform: uppercase
}

.repos-header-container {
  margin: 0 auto;
  max-width: 1200px;

  position: relative;
  height: 100%;
  margin: 0 auto;
  border: 0;
  color: white;
}

/* repos list main body */

.repos-list-container {
  background-image: url('../img/background_index.png');
  background-size: cover;
  background-position: center;
}

.repos-list {
  margin: 0 auto;
  max-width: 1200px;

  list-style-type: none;
  padding: 0;
}

.repos-list li {
    margin-bottom: 1rem;
    padding: 4rem;

    border-radius: 5px;
    box-shadow: -15px 13px 0px 2px #4D4856;

  background-color: #78A19D;
}

.repos-list li:hover {
  background-color: #98D1CD;
  transform: translate(-8px, 7px);
  box-shadow: -7px 6px 0 2px #4D4856;
}

.repos-list li:active {
    box-shadow: inset -1px 0 13px 3px #4D4856;
}

.repos-list li h3 {
  margin: 0;

    /*left border */
  border-left: .5rem solid #C6D9DA;
  padding: 1rem 0 1rem 2rem;
}

.repos-list a:link,
.repos-link a:visited {
  color: white;
  text-decoration: none;
}

.repos-list a:active,
.repos-link a:hover {
  color: white;
}

/* Media Queries */

@media screen and (min-width: 320px) {
    /* projects list of images */
    .pl-3x2 li {
        height: 28rem;
    }

    .pl-1x1 li {
        height: 31rem;
    }

    /* repos list */
    .repos-list-container {
        padding: 3rem 0 0;
    }

    .repos-header {
      height: 200px;
    }

    .repos-header-text {
      bottom: 11%;
    }
}

@media screen and (min-width: 600px) {
    /* Project header images */
    .project-header-img {
        width: 50%;
    }

    /* show second image */
    .project-header-img:nth-child(2) {
        display: inline-block;
    }

    /* repos list */
    .repos-list-container {
        padding: 3rem;
    }
}

@media screen and (min-width: 768px) {
    /* intro section */
    .jumbotron-container {
        height: 60vh;
    }

    .sub-header-child {
        position: relative;
        top: 50%;
        transform: translateY(-50%);
    }

    .sub-header-container {
        height: 8rem;
    }

    /* button grid styling */
    #first-circle-btn {
        margin-left: 0;
    }

    .circle-button {
        width: 32.266667%;
        margin-left: 1.6%;
    }

    /* button grid styling */
    #first-nav-btn {
        margin-left: 0;
    }

    .nav-button {
        width: 32.266667%;
        margin-left: 1.6%;
    }

    /*projects section */
    .projects-header-text {
        font-size: 7em;
    }

    /* repos list */
    .repos-list-container {
        padding: 7rem;
    }

    .repos-header {
      height: 300px;
    }

    .repos-header-text {
      bottom: 6%;
    }
}

@media screen and (min-width: 900px) {
    /* Project header images */
    .project-header-img {
        width: 33.333%;
    }

    /* show second image */
    .project-header-img:nth-child(2),
    .project-header-img:nth-child(3) {
        display: inline-block;
    }
}

@media screen and (min-width: 1200px) {
  .jumbotron-container {
      height: auto;
  }

  .faq-parent-container {
    padding: 2rem 5rem;
  }
}

